force-app/main/default/objects/Campaign/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <label>BU</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Formation Initiale</fullName>
            </value>
            <value>
                <fullName>Communication  Corporate</fullName>
            </value>
            <value>
                <fullName>EMLYON FOREVER</fullName>
            </value>
            <value>
                <fullName>Fondation</fullName>
            </value>
            <value>
                <fullName>Projets Partenariats</fullName>
            </value>
            <value>
                <fullName>Employabilité</fullName>
            </value>
            <value>
                <fullName>Taxe</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>PGM</fullName>
            </value>
            <value>
                <fullName>AMP</fullName>
            </value>
            <value>
                <fullName>Executive Mastères</fullName>
            </value>
            <value>
                <fullName>DUA</fullName>
            </value>
            <value>
                <fullName>Prog. Courts</fullName>
            </value>
            <value>
                <fullName>Intra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>