force-app/main/default/objects/Campaign/fields/Canal_de_communication_sortant__c.field-meta.xml
<CustomField>
    <fullName>Canal_de_communication_sortant__c</fullName>
    <label>Canal de communication sortant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Courrier</fullName>
            </value>
            <value>
                <fullName>Téléphone</fullName>
            </value>
            <value>
                <fullName>Réseaux sociaux</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>