force-app/main/default/objects/Campaign/fields/Cat_gorie__c.field-meta.xml
<CustomField>
    <fullName>Cat_gorie__c</fullName>
    <label>Catégorie</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Réunion d&apos;information</fullName>
            </value>
            <value>
                <fullName>Invitation événements</fullName>
            </value>
            <value>
                <fullName>Information programmes</fullName>
            </value>
            <value>
                <fullName>Information Corporate</fullName>
            </value>
            <value>
                <fullName>Promotion commerciale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>