force-app/main/default/objects/Campaign/fields/Dedoublonage_effectue__c.field-meta.xml
<CustomField>
    <fullName>Dedoublonage_effectue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dédoublonage effectué</label>
    <type>Checkbox</type>
</CustomField>