force-app/main/default/objects/Campaign/fields/Exercice__c.field-meta.xml
<CustomField>
    <fullName>Exercice__c</fullName>
    <description>Champ créé pour la reprise (à faire évoluer si besoin)</description>
    <label>Exercice</label>
    <length>10</length>
    <type>Text</type>
</CustomField>