force-app/main/default/objects/Campaign/fields/Lieu__c.field-meta.xml
<CustomField>
    <fullName>Lieu__c</fullName>
    <description>Champ créé pour la reprise (à faire évoluer si besoin)</description>
    <label>Lieu</label>
    <length>50</length>
    <type>Text</type>
</CustomField>