force-app/main/default/objects/Campaign/fields/Membres_net_de_la_campagne__c.field-meta.xml
<CustomField>
    <fullName>Membres_net_de_la_campagne__c</fullName>
    <label>Membres net de la campagne</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>