force-app/main/default/objects/Campaign/fields/Reprise_LOT_2015__c.field-meta.xml
<CustomField>
    <fullName>Reprise_LOT_2015__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reprise LOT 2015</label>
    <type>Checkbox</type>
</CustomField>