force-app/main/default/objects/Campaign/fields/Taux_d_ouverture__c.field-meta.xml
<CustomField>
    <fullName>Taux_d_ouverture__c</fullName>
    <label>Taux d&apos;ouverture</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>