force-app/main/default/objects/Campaign/fields/x18caracteres__c.field-meta.xml
<CustomField>
    <fullName>x18caracteres__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>x18caracteres</label>
    <type>Text</type>
</CustomField>