force-app/main/default/objects/Campaign/recordTypes/Campagne_non_Emailing.recordType-meta.xml
<RecordType>
    <fullName>Campagne_non_Emailing</fullName>
    <active>true</active>
    <description>Campagne non inxmail</description>
    <label>Campagne non Emailing</label>
</RecordType>