force-app/main/default/objects/Campaign/recordTypes/Campagne_Pardot.recordType-meta.xml
<RecordType>
    <fullName>Campagne_Pardot</fullName>
    <active>true</active>
    <label>Campagne Pardot</label>
</RecordType>