force-app/main/default/objects/Campaign/listViews/campagne_membres.listView-meta.xml
<ListView>
    <fullName>campagne_membres</fullName>
    <columns>CAMPAIGN.ID</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CAMPAIGN.LAST_UPDATE</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>Membres_net_de_la_campagne__c</columns>
    <filterScope>Everything</filterScope>
    <label>Campagne et membres</label>
    <language>fr</language>
</ListView>