force-app/main/default/objects/Campaign/listViews/Campagnes_CPsaltopoulos1.listView-meta.xml
<ListView>
    <fullName>Campagnes_CPsaltopoulos1</fullName>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>contains</operation>
    </filters>
    <label>Campagnes - toutes</label>
    <language>fr</language>
</ListView>