force-app/main/default/objects/Campaign/listViews/Campagnes_Reprise.listView-meta.xml
<ListView>
    <fullName>Campagnes_Reprise</fullName>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>contains</operation>
        <value>Reprise</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NUM_CONTACTS</field>
        <operation>greaterThan</operation>
        <value>1</value>
    </filters>
    <label>Campagnes - Reprise</label>
    <language>fr</language>
</ListView>