force-app/main/default/objects/Campaign/listViews/Campagnes_Tests.listView-meta.xml
<ListView>
    <fullName>Campagnes_Tests</fullName>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>test</value>
    </filters>
    <label>Campagnes - Tests</label>
    <language>fr</language>
</ListView>