force-app/main/default/objects/Campaign/listViews/Toutes_les_campagnes_connect_s_Inxmail.listView-meta.xml
<ListView>
    <fullName>Toutes_les_campagnes_connect_s_Inxmail</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les campagnes synch. Inxmail</label>
</ListView>